[0.6.1]
* add manpage
* fixed italian and french translation
* can resolv names
* wol-bootptab reads mac and host from bootptab file
* wol-dhcpdconf now reads mac and host
[0.6.0]
* wol-dhcpdconf reads mac and ip from dhcpd.conf file
* can read macfiles from stdin
* add SecureON(TM) support to magic packets(TM) and macfile
* added french and italian translation
* enhanced documentation
[0.5.1]
* fixed memory leak in option parsing
* to simplify things default IP address is now 255.255.255.255
[0.5.0]
* complete rewrite
* better auto* support, removed shtool
* removed man page, added info page
* removed -m option, multiple MAC-ADDRESSES can be given as command line
	parameter
* i18n support (german translation done)
* new mac file syntax (can be mixed with old one)
	e.g.: XX:XX:XX:XX:XX:XX x.x.x.x:port
* removed -q/--quiet and added -v/--verbose
[0.4.1]
* -q, --quiet supresses most error messages
* -w, --wait waits for x msecs between 2 magic packets (aka fuse health pack)