@@ -4,6 +4,7 @@
 * can resolv names
 * wol-bootptab reads mac and host from bootptab file
 * wol-dhcpdconf now reads mac and host
+* fixed a parsing bug in wol-dhcpdconf
 [0.6.0]
 * wol-dhcpdconf reads mac and ip from dhcpd.conf file
 * can read macfiles from stdin
